--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Alcsaw <alcsaw@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "express": "^4.17.1",
     "pg": "^8.3.0",
@@ -12,6 +13,16 @@
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "sequelize-cli": "^6.2.0"
+    "jest": "^26.4.0",
+    "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.2.0",
+    "sqlite3": "^5.0.0"
+  },
+  "scripts": {
+    "dev": "nodemon src/server.js --ignore __tests__",
+    "start": "node src/server.js",
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "test": "NODE_ENV=test jest",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   }
 }
