--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Alcsaw <alcsaw@hotmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "express": "^4.17.1",
@@ -16,13 +17,14 @@
     "jest": "^26.4.0",
     "nodemon": "^2.0.4",
     "sequelize-cli": "^6.2.0",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "supertest": "^4.0.2"
   },
   "scripts": {
     "dev": "nodemon src/server.js --ignore __tests__",
     "start": "node src/server.js",
     "pretest": "NODE_ENV=test sequelize db:migrate",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --verbose",
     "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   }
 }
