--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "express": "^4.17.1",
     "factory-girl": "^5.0.4",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.3.0",
     "sequelize": "^6.3.4"
